@@ -1,3 +1,8 @@
+2013-07-06  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* mm-view.el (mm-inline-text-html): Don't bug out on multipart messages
+	(bug#13762).
+
 2013-07-05  David Kastrup  <dak@gnu.org>
 
 	* auth-source.el (auth-source-netrc-parse-one): Allow empty strings in
